--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,13 @@
     <color name="colorAccent">#03DAC5</color>
 
 
-    <color name="color_white">#F5F5F5</color>
-    <color name="color_yellow">#FFF59D</color>
-    <color name="color_green">#81C784</color>
-    <color name="color_blue">#80d8ff</color>
-    <color name="color_red">#ff8a80</color>
-    <color name="color_violet">#e1bee7</color>
-    <color name="color_pink">#f8bbd0</color>
+    <color name="white">#F5F5F5</color>
+    <color name="yellow">#FFF59D</color>
+    <color name="green">#81C784</color>
+    <color name="blue">#80d8ff</color>
+    <color name="red">#ff8a80</color>
+    <color name="violet">#e1bee7</color>
+    <color name="pink">#f8bbd0</color>
 
 
 
